@@ -78,19 +78,19 @@ static BOOL show_hide_pane( debugger_pane pane, int show );
 static void toggle_display( debugger_pane pane, UINT menu_item_id );
 static int create_register_display( HFONT font );
 /* int create_memory_map( void ); this function is handled by rc */
-static int create_breakpoints();
+static int create_breakpoints( void );
 static int create_disassembly( HFONT font );
 static int create_stack_display( HFONT font );
 static void stack_click( LPNMITEMACTIVATE lpnmitem );
-static int create_events();
+static int create_events( void );
 static void events_click( LPNMITEMACTIVATE lpnmitem );
 /* int create_command_entry( void ); this function is handled by rc */
 /* int create_buttons( void ); this function is handled by rc */
 
 static int activate_debugger( void );
 static int update_memory_map( void );
-static int update_breakpoints();
-static int update_disassembly();
+static int update_breakpoints( void );
+static int update_disassembly( void );
 static int update_events( void );
 static void add_event( gpointer data, gpointer user_data GCC_UNUSED );
 static int deactivate_debugger( void );
@@ -100,7 +100,7 @@ static int move_disassembly( WPARAM scroll_command );
 static void evaluate_command( void );
 static void win32ui_debugger_done_step( void );
 static void win32ui_debugger_done_continue( void );
-static void win32ui_debugger_break();
+static void win32ui_debugger_break( void );
 static void delete_dialog( void );
 static void win32ui_debugger_done_close( void );
 static INT_PTR CALLBACK win32ui_debugger_proc( HWND hWnd, UINT msg,
@@ -113,7 +113,8 @@ static libspectrum_word disassembly_top;
 static const int disassembly_min = 0x0000;
 static const int disassembly_max = 0xffff;
 static const float disassembly_step = 0.5;
-static int disassembly_page = 20; /* Visual styles could change visible rows */
+/* Visual styles could change visible rows */
+static unsigned int disassembly_page = 20;
 
 /* Have we created the above yet? */
 static int dialog_created = 0;
@@ -484,7 +485,7 @@ stack_click( LPNMITEMACTIVATE lpnmitem )
     readbyte_internal( address ) + readbyte_internal( address + 1 ) * 0x100;
 
   error = debugger_breakpoint_add_address(
-    DEBUGGER_BREAKPOINT_TYPE_EXECUTE, -1, destination, 0,
+    DEBUGGER_BREAKPOINT_TYPE_EXECUTE, memory_source_any, 0, address, 0,
     DEBUGGER_BREAKPOINT_LIFE_ONESHOT, NULL
   );
   if( error ) return;
@@ -730,9 +731,11 @@ update_memory_map( void )
     SendDlgItemMessage( fuse_hDBGWnd, IDC_DBG_MAP11 + ( i * 4 ), 
                         WM_SETTEXT, ( WPARAM ) 0, ( LPARAM ) buffer );
 
-    /* FIXME: memory_bank_name is not unicode */
-    _sntprintf( buffer, 40, TEXT( "%s %d" ), memory_bank_name( &memory_map_read[i] ),
-	        memory_map_read[i].page_num );
+    /* FIXME: memory_source_description is not unicode */
+    _snprintf( buffer, 40, TEXT( "%s %d" ),
+               memory_source_description( memory_map_read[i].source ),
+               memory_map_read[i].page_num );
+
     SendDlgItemMessage( fuse_hDBGWnd, IDC_DBG_MAP11 + ( i * 4 ) + 1, 
                         WM_SETTEXT, ( WPARAM ) 0, ( LPARAM ) buffer );
 
@@ -751,14 +754,14 @@ update_memory_map( void )
 }
 
 static int
-update_breakpoints()
+update_breakpoints( void )
 {
   /* FIXME: review this function for unicode compatibility */
   TCHAR buffer[ 1024 ],
     *breakpoint_text[6] = { &buffer[  0], &buffer[ 40], &buffer[80],
 			    &buffer[120], &buffer[160], &buffer[200] };
   GSList *ptr;
-  TCHAR format_string[ 1024 ], page[ 1024 ];
+  TCHAR format_string[ 1024 ];
 
   LV_ITEM lvi;
   lvi.mask = LVIF_TEXT;
@@ -781,14 +784,15 @@ update_breakpoints()
     case DEBUGGER_BREAKPOINT_TYPE_EXECUTE:
     case DEBUGGER_BREAKPOINT_TYPE_READ:
     case DEBUGGER_BREAKPOINT_TYPE_WRITE:
-      if( bp->value.address.page == -1 ) {
-	_sntprintf( breakpoint_text[2], 40, format_16_bit(),
-		    bp->value.address.offset );
+      if( bp->value.address.source == memory_source_any ) {
+        _sntprintf( breakpoint_text[2], 40, format_16_bit(),
+        bp->value.address.offset );
       } else {
-	debugger_breakpoint_decode_page( page, 1024, bp->value.address.page );
-	_sntprintf( format_string, 1024, "%%s:%s", format_16_bit() );
-	_sntprintf( breakpoint_text[2], 40, format_string, page,
-		    bp->value.address.offset );
+        snprintf( format_string, 1024, "%%s:%s:%s",
+                  format_16_bit(), format_16_bit() );
+        snprintf( breakpoint_text[2], 40, format_string,
+                  memory_source_description( bp->value.address.source ),
+                  bp->value.address.page, bp->value.address.offset );
       }
       break;
 
@@ -1091,7 +1095,7 @@ win32ui_debugger_done_close( void )
 }
 
 static INT_PTR CALLBACK
-win32ui_debugger_proc( HWND hWnd, UINT msg,
+win32ui_debugger_proc( HWND hWnd GCC_UNUSED, UINT msg,
                        WPARAM wParam, LPARAM lParam )
 {
   switch( msg ) {
